# SmarBot

./: .env.enc  .gitignore  AUTOMOTIVE_README.md  Makefile  RAPPORT_INTELLIGENCE_CHATBOT.md  README.md  README_GOONET.md  compose.yaml  neo-smart-chat.code-workspace  sample_automotive_data.csv  start_goonet_system.sh  test_complete_system.py  test_intelligence.py  test_intelligence_simple.py
backend/: .env.enc  Dockerfile  Dockerfile.local  alembic.ini  entrypoint.sh  jobs.Dockerfile  jobs.Dockerfile.local  makefile  pyproject.toml
backend/api/: app.py  database.py  goonet_api.py  main.py
backend/api/commands/: create_openapi_schema.py  get_container_documents.py  init_app.py  prepdocs.py
backend/api/commands/migration/: create_default_prompt_templates.py
backend/api/controllers/: common.py
backend/api/controllers/api/: chat_completion.py  document.py  endpoint.py  question_answer.py  router.py
backend/api/controllers/automotive/: router.py
backend/api/data_processing/: chat_engine.py  csv_converter.py  vector_search.py
backend/api/dependency_injector/: __init__.py
backend/api/infrastructures/ai_vision/: ai_vision.py  provider.py
backend/api/infrastructures/auth0/: auth0.py  client.py  provider.py
backend/api/infrastructures/bing_search/: bing_search.py  provider.py
backend/api/infrastructures/blob_storage/: blob_storage.py  provider.py
backend/api/infrastructures/box/: box.py  provider.py
backend/api/infrastructures/cognitive_search/: cognitive_search.py  index_settings.py  provider.py
backend/api/infrastructures/document_intelligence/: document_intelligence.py  provider.py
backend/api/infrastructures/llm/: bedrock_automotive_service.py  llm.py  provider.py
backend/api/infrastructures/metabase/: metabase.py  provider.py
backend/api/infrastructures/msgraph/: client.py  msgraph.py  provider.py
backend/api/infrastructures/opensearch/: opensearch_service.py
backend/api/jobs/: alert_capacity.py  alert_capacity_start_up.py  calculate_storage_usage.py  convert_and_upload_pdf_document.py  create_chat_completion_export.py  create_conversation_export.py  create_embeddings.py  delete_attachments.py  delete_attachments_start_up.py  delete_bot.py  delete_document_folders.py  delete_multiple_documents.py  delete_tenant.py  import_users.py  jobs.py  main.py  queue_storage.py  start_external_data_connection.py  sync_document_location.py  sync_document_name.py  sync_document_path.py  upload_external_documents.py  upload_question_answers.py
backend/api/libs/: api_log.py  app_env.py  blob_content.py  csv.py  ctx.py  datetime.py  error_handlers.py  feature_flag.py  file.py  ip_address.py  logging.py  retry.py  sentry.py  table.py  url_rule.py
backend/api/migrations/: env.py  script.py.mako
backend/api/usecase/api_key/: __init__.py  (+1 more)
backend/experiment/: process_batch_request.ipynb  question_list.xlsx
backend/experiment/ursa/: .gitignore  delete_files_hierarchy.ipynb  pyproject.toml  upload_files_hierarchy.ipynb  ursa_accuracy_improvement.ipynb
backend/pandoc/: reference.docx
backend/scripts/: migrate_blobs.py  polling.py  restore_index_by_queue.py  seed.sh
backend/tests/: conftest.py
backend/tests/libs/: test_file.py  test_table.py
function/: .env.enc  .pre-commit-config.yaml  Dockerfile  Dockerfile.local  Makefile  acr-task.yml  pyproject.toml
function/jobs/: jobs.py  main.py  queue_storage.py
function/libs/: connection.py  constants.py  feature_flag.py  get_database_uri.py  logging.py  retry.py  session.py
function/migrations/: __init__.py  types.py
function/migrations/usecase/: __init__.py  add_allowed_model_families_to_tenants.py  add_document_folder_id_field_to_search_index.py  add_external_data_fields_to_search_index.py  add_is_vectorized_field_to_search_index.py  add_model_family_to_bot_templates.py  blob_container_for_chat_gpt_default.py  chat_log_to_conversation.py  conversation_data_points_document_id.py  correct_token_count.py  create_tenant_admin_groups_and_general_group.py  create_tenant_container.py  init_data_source_id_to_bots.py  init_document_folders.py  init_document_folders_startup.py  make_tenant_user_relationship_many_to_one.py  migrate_index_content.py  migrate_model_to_model_family.py  pdf_parser_for_chat_gpt_default.py  set_either_user_policy_or_group_policy_to_user_policy.py  term_to_term_v2.py  token_count.py  transfer_container_by_tenant_id.py  update_user_tenant_info_by_tenant_id_and_user_id.py  update_vector_index_schema.py  usecase.py
function/process_document/: __init__.py  types.py
function/process_document/ai_vision/: ai_vision.py  client.py
function/process_document/blob_storage/: blob_storage.py  blob_storage_for_ursa.py  client.py
function/process_document/cognitive_search/: client.py  cognitive_search.py  cognitive_search_for_ursa.py  cognitive_search_for_ursa_semantic.py
function/process_document/document_intelligence/: client.py  document_intelligence.py
function/process_document/libs/: bot.py  chunk.py  document.py  metering.py  pdf.py
function/process_document/llm_document_reader/: client.py  image_describer.py  llm_document_reader.py
function/process_document/postgres/: postgres.py
function/process_document/queue_storage/: queue_storage.py
function/process_document/utils/: type_validation.py
function/scripts/: hot_reload.py  polling.py
function/search_index_backup/: __init__.py  types.py
function/search_index_backup/blob_storage/: blob_storage.py  client.py
function/search_index_backup/cognitive_search/: client.py  cognitive_search.py
function/search_index_backup/queue_storage/: queue_storage.py
function/search_index_backup_startup/: __init__.py
function/search_index_backup_startup/cognitive_search/: client.py  cognitive_search.py
function/search_index_backup_startup/queue_storage/: queue_storage.py
function/search_index_restore/: __init__.py
function/search_index_restore/blob_storage/: blob_storage.py  client.py
function/search_index_restore/cognitive_search/: client.py  cognitive_search.py
function/search_index_restore/queue_storage/: queue_storage.py
(+1139 files in other folders)
